fix: 🐛 code block overflow

--- a/src/views/chat/components/message/themes.less
+++ b/src/views/chat/components/message/themes.less
@@ -42,6 +42,11 @@
 			box-shadow: 20px 0px #fdbc40, 40px 0px #35cd4b;
 			z-index: 10;
 		}
+
+		code {
+			white-space: pre-wrap;
+			word-wrap: break-word;
+		}
 	}
 	.clipboard {
 		top: -12px;
